# Monitoreo-de-Sensores---Implementacion-ROS

./: .dockerignore  .env.example  .gitattributes  .gitignore  README.md  docker-compose.windows.yml  docker-compose.yml  install.sh  menu.sh
.githooks/: pre-commit  pre-commit.ps1
MicroROS - ESP/: README.md
MicroROS - ESP/docs/: AGREGAR_TERCER_TOPIC.md  INICIO_RAPIDO.md  README_ENV.md
MicroROS - ESP/main/: esp32_serial_transport.h
MicroROS - ESP/main/versions/wifi/include/: config.h  motor_controller.h  ros_publisher.h
MicroROS - ESP/main/versions/wifi/src/: sensor_manager.c
MicroROS - ESP/scripts/: microros.sh
config/: fastrtps_bridge.xml
data/: .gitignore
data/images/docs/: documentacion_graficos.md
database/: __init__.py  ros_sensor_node.py
database/modules/: __init__.py  config.py  crear_colecciones.py  service.py
docker/: Dockerfile.ros  ros_entrypoint.sh
legacy/analisis/adjuntos/: .sheet_config  registro_parametros_sheets.py  requirements_registro.txt
legacy/analisis/datos_sensores/: sensores_2026-01-14.jsonl  sensores_2026-01-15.jsonl  sensores_2026-01-16.jsonl  sensores_2026-01-17.jsonl  sensores_2026-01-18.jsonl  sensores_2026-01-19.jsonl
legacy/analisis/images/docs/: documentacion_codigo.md
legacy/analisis/scripts/: analisis_temp_ph.py
legacy/main/: README_MODULAR.md
legacy/main/assets/: algas_small.webm
legacy/main/components/: __init__.py
legacy/main/config/: __init__.py  colors.py  settings.py
legacy/main/database/: __init__.py  mongo_handler.py
legacy/main/docs/: SETUP_DASHBOARD.md
legacy/main/pages/: __init__.py  analisis_backup.py  analisis_estadistico.py  dispositivos.py  monitoreo_vivo.py
legacy/main/styles/: __init__.py  custom_css.py
legacy/main/utils/: helpers.py
legacy/versiones esp/legacy/inicial_V1/: sensor_tempV2.c
main/: app.py  app_original.py  requirements.txt
main/components/: charts.py  sidebar.py
main/config/: settings.py
main/database/: __init__.py  mongo_handler.py
main/legacy/: analisis_estadisticoV05.py  app_original.py
main/pages/: analisis_estadistico.py  dispositivos.py  monitoreo_vivo.py  registros.py
main/styles/: __init__.py  custom_css.py  custom_css_analisis.py  custom_css_dispositivos.py  custom_css_registros.py
main/utils/: __init__.py
microRostest/: .gitignore  ESTRUCTURA_PROYECTO.md  QUICKSTART.md  README.md  RESUMEN_FINAL.md  START_HERE.sh  USO_NODO_ROS.md  sdkconfig
microRostest/docs/: ESTRUCTURA_PROYECTO.md  INICIO_RAPIDO.md  README_ENV.md  README_MONGODB.md  USO_NODO_ROS.md
microRostest/main/: CMakeLists.txt  sensor_temp.c  sensor_tempV3.c
microRostest/main/versions/legacy/: ros_wifi_original.c
microRostest/main/versions/sensor_temp_ph/: sensor_tempV3.c
microRostest/main/versions/wifi/: generate_wifi_config.py  wifi_config.h
microRostest/main/versions/wifi/include/: config.h  ros_publisher.h  sensor_manager.h
microRostest/main/versions/wifi/src/: main.c  motor_controller.c  ros_publisher.c  sensor_manager.c
microRostest/scripts/: README.md  build_and_flash.sh  install_microros_agent.sh  microros.sh  microros_helper.sh  pc_sensor_subscriber.py  pc_temperature_subscriber.py  requirements.txt  sensor_to_mongodb.py
microRostest/scripts/legacy/: microros_backup.sh
microRostest/scripts/utils/: calibracion_ph.py
microros-esp/: .gitignore  README.md
microros-esp/components/micro_ros_espidf_component/network_interfaces/: uros_wlan_netif.c
microros-esp/docs/: ESTRUCTURA_PROYECTO.md  README_MONGODB.md
microros-esp/main/: CMakeLists.txt  esp32_serial_transport.c  idf_component.yml
microros-esp/main/Motores/: motor_control_node.py
microros-esp/main/versions/wifi/: generate_wifi_config.py
microros-esp/main/versions/wifi/include/: config.h  motor_controller.h  network_manager.h  ros_publisher.h  sensor_manager.h
microros-esp/main/versions/wifi/src/: main.c  motor_controller.c  network_manager.c  ros_publisher.c  sensor_manager_filtered.c
microros-esp/scripts/: README.md  microros.sh  sensor_to_mongodb.py
microros-esp/scripts/utils/: calibracion_ph.py
prueba_sensor_temp/: prueba_sensor_temp.ino
resource/scripts/: analisis.py  recuperador.py  serie_tiempo.py
scripts/: firewall.sh  start_agent.sh  start_bridge.sh  status.sh
scripts/telegram/: smart_alerter.py  smart_reporter.py
services/: smart-agent.service.tpl  smart-alerter.service.tpl  smart-bridge.service.tpl
systemd/: smart-alerter.service
